fix: Limit hero image to maximum width of 453px
- Change hero-section__image img max-width from 100% to 453px
- Prevents image from getting too large on desktop
- Maintains aspect ratio with height: auto

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -452,7 +452,7 @@
   min-height: 400px;
 
   img {
-    max-width: 100%;
+    max-width: 453px;
     height: auto;
     display: block;
   }
